--- a/dependency/templates/index.html
+++ b/dependency/templates/index.html
@@ -1,31 +1,32 @@
 {% load static %}
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Isp</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Rubik:300,400,700,700i,300i,400i,500">
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
 </head>
 <body>
   <app-root>
   	<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>Welcome to The Integrated Space Plan</h1>
-</div>
 
 <div style="text-align: center;">
-<img src="http://localhost:8000/static/loader-1.gif">
+<img src="/static/loader-1.gif">
 </div>
 
 
   </app-root>
-<script type="text/javascript" src="{% static 'inline.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'polyfills.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'styles.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'vendor.bundle.js' %}"></script>
-<script type="text/javascript" src="{% static 'main.bundle.js' %}"></script>
+
+
+<script type="text/javascript" src="{% static 'runtime.js' %}"></script>
+<script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
+<script type="text/javascript" src="{% static 'styles.js' %}"></script>
+<script type="text/javascript" src="{% static 'vendor.js' %}"></script>
+<script type="text/javascript" src="{% static 'main.js' %}"></script>
+
 </body>
 </html>
