--- a/dependency/templates/index.html
+++ b/dependency/templates/index.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Isp</title>
@@ -9,24 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Rubik:300,400,700,700i,300i,400i,500">
   <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
-</head>
+<link rel="stylesheet" href="/static/styles.d7d432bf96bba2a1167a.css"></head>
 <body>
-  <app-root>
-  	<!--The content below is only a placeholder and can be replaced.-->
-
-<div style="text-align: center;">
-<img src="/static/loader-1.gif">
-</div>
+  <app-root></app-root>
 
 
-  </app-root>
-
-
-<script type="text/javascript" src="{% static 'runtime.js' %}"></script>
-<script type="text/javascript" src="{% static 'polyfills.js' %}"></script>
-<script type="text/javascript" src="{% static 'styles.js' %}"></script>
-<script type="text/javascript" src="{% static 'vendor.js' %}"></script>
-<script type="text/javascript" src="{% static 'main.js' %}"></script>
-
-</body>
-</html>
+<script type="text/javascript" src="/static/runtime.6afe30102d8fe7337431.js"></script><script type="text/javascript" src="/static/polyfills.456a59a17e203a4fac96.js"></script><script type="text/javascript" src="/static/main.d53ca0506f427f1843f2.js"></script></body></html>
